# Beijing-AQI-Prediction

./: .gitignore  IE_7374_Machine_Learning_Project_Group9-1.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: README.md
scripts/: download_data.py  train.py
src/beijing_aqi/: __init__.py  aqi.py  cli.py  data.py  features.py  models.py
tests/: conftest.py  test_aqi.py  test_models_are_custom.py
